Resolve curriculum content overlap on nav
Relative position of curriculum wrapper flows over nav and prevents
hyperlinks from being click-able.

--- a/_stylesheets/curriculum.scss
+++ b/_stylesheets/curriculum.scss
@@ -17,7 +17,6 @@
 }
 
 .curriculum{
-  position: relative;
   font-size: 18px;
 
   h3 {
